--- a/app/src/main/res/layout/fragment_discover.xml
+++ b/app/src/main/res/layout/fragment_discover.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.DiscoverScreen.DiscoverFragment">
+    tools:context=".ui.discoverScreen.DiscoverFragment">
 
     <ProgressBar
         android:id="@+id/progressBar"
