--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="8dp"
-    tools:context=".ui.SearchScreen.SearchFragment">
+    tools:context=".ui.searchScreen.SearchFragment">
 
     <ProgressBar
         android:id="@+id/progressBar"
