--- a/app/src/main/res/layout/word_item.xml
+++ b/app/src/main/res/layout/word_item.xml
@@ -11,5 +11,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@android:color/holo_orange_light"
+        android:textColor="@color/white"
+        android:textSize="24sp"
+        android:textStyle="bold"
         tools:text="hello" />
 </LinearLayout>
