--- a/app/src/main/res/layout/movie_item.xml
+++ b/app/src/main/res/layout/movie_item.xml
@@ -2,7 +2,7 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="300dp"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="12dp"
     app:cardCornerRadius="20dp"
@@ -60,9 +60,9 @@
                 android:layout_gravity="start"
                 android:layout_marginTop="5dp"
                 android:ellipsize="end"
-                android:maxLines="4"
+                android:maxLines="5"
                 android:textColor="@color/dark_gray"
-                android:textSize="18sp"
+                android:textSize="16sp"
                 android:textStyle="bold"
                 tools:text="Go behind the scenes during One Directions sell out Take Me Home tour and experience life on the road." />
         </LinearLayout>
